--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <div class="aspect-square">
           <img
-            src="image3.jpg"
-            title="AMAP de Léognan, Gironde"
+            src="image3.png"
+            
             class="w-full h-full object-cover rounded-lg shadow-lg"
           />
         </div>
