--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       </div>
     </header>
 
+    <div class="container mx-auto px-4 py-6 text-slate-600">
+      <p style="font-style: italic">
+        Alilo est une coopérative qui associe <b>formation</b> et
+        <b>outils numériques</b>
+        pour soutenir les producteurs en vente directe et les acteurs de
+        l'alimentation.
+      </p>
+    </div>
+
     <!-- Image Grid -->
     <main class="container mx-auto px-4 py-8">
       <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-4">
@@ -35,14 +44,13 @@
         <div class="aspect-square">
           <img
             src="image3.png"
-            
             class="w-full h-full object-cover rounded-lg shadow-lg"
           />
         </div>
       </div>
 
       <!--apps-->
-      <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-4 mt-8">
+      <div class="grid md:grid-cols-3 sm:grid-cols-1 gap-4 mt-4">
         <a
           href="https://www.cagette.net"
           target="_blank"
@@ -56,8 +64,8 @@
           />
           <div class="p-4">
             <p class="mb-3 font-normal text-slate-600">
-              Notre plateforme de vente directe en ligne pour les producteurs
-              locaux.
+              Notre plateforme de vente directe en ligne<br />pour les
+              producteurs locaux.
             </p>
           </div>
         </a>
@@ -93,8 +101,8 @@
           />
           <div class="p-4">
             <p class="mb-3 font-normal text-slate-600">
-              Plateforme de commande en ligne pour les épiceries solidaires du
-              réseau ANDES
+              Plateforme de click & collect<br />pour les épiceries solidaires
+              du réseau ANDES
             </p>
           </div>
         </a>
@@ -106,10 +114,10 @@
       <div class="container mx-auto px-4 py-8">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div>
-            <h3 class="text-lg font-semibold mb-4">ALILO SCOP</h3>
+            <h3 class="text-lg font-semibold">ALILO SCOP</h3>
             <p>4 impasse Durban</p>
             <p>33000 Bordeaux</p>
-            <p>France</p>
+            <p>Nouvelle-Aquitaine, France</p>
           </div>
 
           <div>
