--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alilo SCOP, activateur de circuits courts</title>
-    <link href="./output.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="alilo-favicon.png" />
+    <link href="/output.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="/alilo-favicon.png" />
   </head>
   <body class="bg-white text-slate-800">
     <!-- Header with Logo -->
     <header class="container mx-auto px-4 py-6">
       <div class="flex items-baseline">
-        <img src="logo.png" alt="ALILO SCOP" class="h-24 w-auto" />
+        <img src="/logo.png" alt="ALILO SCOP" class="h-24 w-auto" />
       </div>
     </header>
 
