--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </a>
 
         <a
-          href="https://epiclic.fr"
+          href="https://www.epiclic.fr"
           target="_blank"
           class="items-center text-center bg-white border border-slate-200 rounded-lg shadow-sm md:flex-row md:max-w-xl hover:bg-slate-200"
         >
@@ -101,8 +101,7 @@
           />
           <div class="p-4">
             <p class="mb-3 font-normal text-slate-600">
-              Plateforme de click & collect<br />pour les épiceries solidaires
-              du réseau ANDES
+              Logiciel de click & collect<br />pour les épiceries solidaires
             </p>
           </div>
         </a>
